# ratatype

./: Cargo.toml  README.md  words.json
src/: main.rs  phrase.rs  words.rs
